--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -10,19 +10,19 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Email</span>
-          <input type="email" ng-model="loginData.email">
+          <input type="email" ng-model="signupData.email">
         </label>
         <label class="item item-input">
           <span class="input-label">Username</span>
-          <input type="text" ng-model="loginData.username">
+          <input type="text" ng-model="signupData.username">
         </label>
         <label class="item item-input">
           <span class="input-label">Password</span>
-          <input type="password" ng-model="loginData.password">
+          <input type="password" ng-model="signupData.password">
         </label>
         <label class="item item-input">
           <span class="input-label">Confirm</span>
-          <input type="password" ng-model="loginData.passwordConfirmation">
+          <input type="password" ng-model="signupData.passwordConfirmation">
         </label>
         <label class="item">
           <button class="button button-block button-positive" type="submit">Sign Up</button>
