updated menu with links to user/artist lists

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -24,14 +24,14 @@
         <ion-item menu-close ng-click="signup()" ng-show="!loggedIn">
           Sign Up
         </ion-item>
-        <ion-item menu-close href="#/app/search" ng-show="loggedIn">
-          Search
+        <ion-item menu-close href="#/app/artists" ng-show="loggedIn">
+          Artists
         </ion-item>
-        <ion-item menu-close href="#/app/browse" ng-show="loggedIn">
-          Browse
+        <ion-item menu-close href="#/app/users" ng-show="loggedIn">
+          Users
         </ion-item>
         <ion-item menu-close href="#/app/playlists" ng-show="loggedIn">
-          Playlists
+          Settings
         </ion-item>
         <ion-item menu-close ng-click="signOut()" ng-show="loggedIn">
           Log Out
