moved users/artists index views

--- a/www/templates/artists/index.html
+++ b/www/templates/artists/index.html
@@ -3,7 +3,7 @@
     <ion-list>
       <ion-item ng-repeat="artist in artists" class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap" href="#/artists/{{artist.id}}">
         <img src="{{artist.headshotUrl()}}">
-        <h2>{{artist.first_name}} {{artist.last_name}}</h2>
+        <h2>{{artist.fullName()}}</h2>
         <p>{{artist.description}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
