--- a/www/templates/users/index.html
+++ b/www/templates/users/index.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Users">
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="user in users" class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap" href="#/user/{{user.id}}">
+      <ion-item ng-repeat="user in users" class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap" href="#/app/users/{{user.id}}">
         <img src="{{user.gravatarUrl()}}">
         <h2>{{user.username}}</h2>
         <i class="icon ion-chevron-right icon-accessory"></i>
