corrected ui-sref routes

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -30,7 +30,7 @@
         <ion-item menu-close ui-sref="app.users" ng-show="loggedIn">
           Users
         </ion-item>
-        <ion-item menu-close ui-sref="app.user({user.id})" ng-show="loggedIn">
+        <ion-item menu-close ui-sref="app.user({id: user.id})" ng-show="loggedIn">
           Profile
         </ion-item>
         <ion-item menu-close ui-sref="app.settings" ng-show="loggedIn">
